--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/portfolio-pic.JPG" alt="" /></a>
 					<h1><strong>I am Oyekanmi Mayowa</strong>, an entry-level Data Analyst<br />
 					insight-driven and solution-oriented <br />
-					<a href="http://html5up.net">More</a>.</h1>
+					<a href="#">More</a>.</h1>
 				</div>
 			</header>
 
@@ -42,24 +42,14 @@
 						<h2><P>PROJECTS</P></h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/Capricorn15/Data-Analytics" ><span class="image fit thumb"><img src="images/Overview.PNG" alt="" /></span></a>
+								<a href="https://github.com/Capricorn15/Data-Analytics" ><span class="image fit thumb"><img src="images/Overview-1.PNG" alt="" /></span></a>
 								<h3>Chinook Sales Analysis</h3>
 								<p>A comprehensive sales analysis using SQL and Power BI to uncover genre trends, top customer profiles, and revenue drivers from the Chinook database.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/Capricorn15/Data-Cleaning-using-Python" class="image fit thumb"><img src="images/icon.png" alt="" /></a>
 								<h3>Data Cleaning with Python</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>This is a project to demonstrate foundational data wrangling and cleaning skills using Python. It involves importing, exploring, and cleaning a raw housing dataset to prepare it for further analysis. The project showcases the use of pandas, NumPy, and other essential libraries to ensure the dataset is accurate, consistent, and analysis-ready.</p>
 							</article>
 						</div>
 						<ul class="actions">
