--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 								<p>A comprehensive sales analysis using SQL and Power BI to uncover genre trends, top customer profiles, and revenue drivers from the Chinook database.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/Capricorn15/Data-Cleaning-using-Python" class="image fit thumb"><img src="images/icon.png" alt="" /></a>
+								<a href="https://github.com/Capricorn15/Data-Cleaning-using-Python" ><span class="image fit thumb"><img src="images/icon.png" alt="" /></a>
 								<h3>Data Cleaning with Python</h3>
 								<p>This is a project to demonstrate foundational data wrangling and cleaning skills using Python. It involves importing, exploring, and cleaning a raw housing dataset to prepare it for further analysis. The project showcases the use of pandas, NumPy, and other essential libraries to ensure the dataset is accurate, consistent, and analysis-ready.</p>
 							</article>
