--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/portfolio-pic.JPG" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/portfolio-pic.jpg" alt="" /></a>
 					<h1><strong>I am Oyekanmi Mayowa</strong>, an entry-level Data Analyst<br />
 					insight-driven and solution-oriented <br />
 					<a href="#">More</a>.</h1>
@@ -42,7 +42,7 @@
 						<h2><P>PROJECTS</P></h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/Capricorn15/Data-Analytics" ><span class="image fit thumb"><img src="images/Overview-1.PNG" alt="" /></span></a>
+								<a href="https://github.com/Capricorn15/Data-Analytics" ><span class="image fit thumb"><img src="images/Overview-1.png" alt="" /></span></a>
 								<h3>Chinook Sales Analysis</h3>
 								<p>A comprehensive sales analysis using SQL and Power BI to uncover genre trends, top customer profiles, and revenue drivers from the Chinook database.</p>
 							</article>
@@ -50,6 +50,11 @@
 								<a href="https://github.com/Capricorn15/Data-Cleaning-using-Python" ><span class="image fit thumb"><img src="images/icon.png" alt="" /></span></a>
 								<h3>Data Cleaning with Python</h3>
 								<p>This is a project to demonstrate foundational data wrangling and cleaning skills using Python. It involves importing, exploring, and cleaning a raw housing dataset to prepare it for further analysis. The project showcases the use of pandas, NumPy, and other essential libraries to ensure the dataset is accurate, consistent, and analysis-ready.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="#" ><span class="image fit thumb"><img src="images/" alt="" /></span></a>
+								<h3>Fashion Retail Analytics</h3>
+								<p></p>
 							</article>
 						</div>
 						<ul class="actions">
