--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/portfolio-pic.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/portfolio-pic.JPG" alt="" /></a>
 					<h1><strong>I am Oyekanmi Mayowa</strong>, an entry-level Data Analyst<br />
-					insight-driven and solution-oriented <br />
+					insight-driven and solution-oriented.<br />
 					<a href="#">More</a>.</h1>
 				</div>
 			</header>
@@ -42,9 +42,9 @@
 						<h2><P>PROJECTS</P></h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/Capricorn15/Data-Analytics" ><span class="image fit thumb"><img src="images/Overview-1.png" alt="" /></span></a>
+								<a href="https://github.com/Capricorn15/Data-Analytics" ><span class="image fit thumb"><img src="images/Overview-1.PNG" alt="" /></span></a>
 								<h3>Chinook Sales Analysis</h3>
-								<p>A comprehensive sales analysis using SQL and Power BI to uncover genre trends, top customer profiles, and revenue drivers from the Chinook database.</p>
+								<p>A comprehensive sales analysis using Python and Power BI to uncover genre trends, top customer profiles, and revenue drivers from the Chinook database.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/Capricorn15/Data-Cleaning-using-Python" ><span class="image fit thumb"><img src="images/icon.png" alt="" /></span></a>
