--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/portfolio-pic.JPG" alt="" /></a>
-					<h1><strong>I am Oyekanmi Mayowa</strong>, an entry-level Data Analyst<br />
+					<h1><strong>I am Oyekanmi Mayowa</strong>, an entry-level Data Analyst,<br />
 					insight-driven and solution-oriented.<br />
 					<a href="#">More</a>.</h1>
 				</div>
@@ -43,17 +43,22 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/Capricorn15/Data-Analytics" ><span class="image fit thumb"><img src="images/Overview-1.PNG" alt="" /></span></a>
-								<h3>Chinook Sales Analysis</h3>
+								<a href="https://github.com/Capricorn15/Data-Analytics" ><h3>Chinook Sales Analysis</h3></a>
 								<p>A comprehensive sales analysis using Python and Power BI to uncover genre trends, top customer profiles, and revenue drivers from the Chinook database.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://github.com/Capricorn15/electric-vehicle-sql-analysis" ><span class="image fit thumb"><img src="images/ev_icon.png" alt="" /></span></a>
+								<a href="https://github.com/Capricorn15/electric-vehicle-sql-analysis" ><h3>Electric Vehicle SQL Analysis</h3></a>
+								<p>This project explores electric vehicle (EV) dataset using SQL to gain insights into electric vehicle distribution, pricing, and characteristics across various dimensions like city, county, and state.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/Capricorn15/Data-Cleaning-using-Python" ><span class="image fit thumb"><img src="images/icon.png" alt="" /></span></a>
-								<h3>Data Cleaning with Python</h3>
+								<a href="https://github.com/Capricorn15/Data-Cleaning-using-Python" ><h3>Data Cleaning with Python</h3></a>
 								<p>This is a project to demonstrate foundational data wrangling and cleaning skills using Python. It involves importing, exploring, and cleaning a raw housing dataset to prepare it for further analysis. The project showcases the use of pandas, NumPy, and other essential libraries to ensure the dataset is accurate, consistent, and analysis-ready.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="#" ><span class="image fit thumb"><img src="images/" alt="" /></span></a>
-								<h3>Fashion Retail Analytics</h3>
+								<h3></h3>
 								<p></p>
 							</article>
 						</div>
