--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						</header>
 						<p>Hello, I’m an entry-level Data Analyst with a curious mind and a strong passion for turning raw data into meaningful stories that inspire action. With practical experience using tools like SQL, Excel, Power BI, and Python, I specialize in exploring datasets, uncovering patterns, and delivering insights that support smarter business decisions.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="https://drive.google.com/file/d/1IZB89VYsvhiWsaOI2YypQLPoa-61dKA-/view?usp=drive_link" class="button">Learn More</a></li>
 						</ul>
 					</section>
 
@@ -54,12 +54,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/Capricorn15/Data-Cleaning-using-Python" ><span class="image fit thumb"><img src="images/icon.png" alt="" /></span></a>
 								<a href="https://github.com/Capricorn15/Data-Cleaning-using-Python" ><h3>Data Cleaning with Python</h3></a>
-								<p>This is a project to demonstrate foundational data wrangling and cleaning skills using Python. It involves importing, exploring, and cleaning a raw housing dataset to prepare it for further analysis. The project showcases the use of pandas, NumPy, and other essential libraries to ensure the dataset is accurate, consistent, and analysis-ready.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="#" ><span class="image fit thumb"><img src="images/" alt="" /></span></a>
-								<h3></h3>
-								<p></p>
+								<p>This is a project to demonstrate foundational data wrangling and cleaning skills using Python. It involves importing, exploring, and cleaning a customer dataset to prepare it for further analysis. The project showcases the use of pandas, NumPy, and other essential libraries to ensure the dataset is accurate, consistent, and analysis-ready.</p>
 							</article>
 						</div>
 						<ul class="actions">
