--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
+							<li><a href="https://github.com/Capricorn15" class="button">Full Portfolio</a></li>
 						</ul>
 					</section>
 
