--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 						<h2><P>PROJECTS</P></h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/Capricorn15/Data-Analytics" ><span class="image fit thumb"><img src="images/Overview-1.PNG" alt="" /></span></a>
+								<a href="https://github.com/Capricorn15/Data-Analytics" ><span class="image fit thumb"><img src="images/overview-db.PNG" alt="" /></span></a>
 								<a href="https://github.com/Capricorn15/Data-Analytics" ><h3>Chinook Sales Analysis</h3></a>
-								<p>A comprehensive sales analysis using Python and Power BI to uncover genre trends, top customer profiles, and revenue drivers from the Chinook database.</p>
+								<p>A comprehensive sales analysis using Python and Power BI to uncover sales and genre trends, top selling artists, and customer segregations from Chinook database.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/Capricorn15/electric-vehicle-sql-analysis" ><span class="image fit thumb"><img src="images/ev_icon.png" alt="" /></span></a>
@@ -55,6 +55,11 @@
 								<a href="https://github.com/Capricorn15/Data-Cleaning-using-Python" ><span class="image fit thumb"><img src="images/icon.png" alt="" /></span></a>
 								<a href="https://github.com/Capricorn15/Data-Cleaning-using-Python" ><h3>Data Cleaning with Python</h3></a>
 								<p>This is a project to demonstrate foundational data wrangling and cleaning skills using Python. It involves importing, exploring, and cleaning a customer dataset to prepare it for further analysis. The project showcases the use of pandas, NumPy, and other essential libraries to ensure the dataset is accurate, consistent, and analysis-ready.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://github.com/Capricorn15/electric-vehicle-sql-analysis" ><span class="image fit thumb"><img src="images/" alt="" /></span></a>
+								<a href="https://github.com/Capricorn15/electric-vehicle-sql-analysis" ><h3>MetroBank Analysis Excel</h3></a>
+								<p></p>
 							</article>
 						</div>
 						<ul class="actions">
