--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/portfolio-pic.JPG" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/upwork-profilepic.JPG" alt="" /></a>
 					<h1><strong>I am Oyekanmi Mayowa</strong>, an entry-level Data Analyst,<br />
 					insight-driven and solution-oriented.<br />
 					<a href="#">More</a>.</h1>
@@ -57,8 +57,8 @@
 								<p>This is a project to demonstrate foundational data wrangling and cleaning skills using Python. It involves importing, exploring, and cleaning a customer dataset to prepare it for further analysis. The project showcases the use of pandas, NumPy, and other essential libraries to ensure the dataset is accurate, consistent, and analysis-ready.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/Capricorn15/electric-vehicle-sql-analysis" ><span class="image fit thumb"><img src="images/" alt="" /></span></a>
-								<a href="https://github.com/Capricorn15/electric-vehicle-sql-analysis" ><h3>MetroBank Analysis Excel</h3></a>
+								<a href="https://github.com/Capricorn15/metro-bank-analysis-excel" ><span class="image fit thumb"><img src="images/metrobank-icon.png" alt="" /></span></a>
+								<a href="https://github.com/Capricorn15/metro-bank-analysis-excel" ><h3>MetroBank Analysis Excel</h3></a>
 								<p></p>
 							</article>
 						</div>
