--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
-
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/upwork-profilepic.JPG" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/upwork-profilepic.PNG" alt="" /></a>
 					<h1><strong>I am Oyekanmi Mayowa</strong>, an entry-level Data Analyst,<br />
 					insight-driven and solution-oriented.<br />
 					<a href="#">More</a>.</h1>
